examples/errors/16_excessive_elements/layout.tml
#use <definitions.tmd>

<Window>
    <Text value="First widget"/>
    <Text value="Second widget"/>
    <Text value="Third widget"/>
    <Text value="Fourth widget"/>
</Window>